# bitcoinoil

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  configure.ac  libbitcoinoilconsensus.pc.in
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  bitcoinoil.sln  bitcoinoil_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoinoil-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  tracing.md  (+3 more)
doc/man/: Makefile.am  bitcoinoil-cli.1  bitcoinoil-qt.1  bitcoinoil-tx.1  bitcoinoil-util.1  bitcoinoil-wallet.1  bitcoinoild.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  banman.h  (+108 more)
(+1072 files in other folders)
