dist_man1_MANS=

if BUILD_BITCOINOILD
  dist_man1_MANS+=bitcoinoild.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinoil-qt.1
endif

if BUILD_BITCOINOIL_CLI
  dist_man1_MANS+=bitcoinoil-cli.1
endif

if BUILD_BITCOINOIL_TX
  dist_man1_MANS+=bitcoinoil-tx.1
endif

if BUILD_BITCOINOIL_UTIL
  dist_man1_MANS+=bitcoinoil-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINOIL_WALLET
  dist_man1_MANS+=bitcoinoil-wallet.1
endif
endif
